fix(java): align jdk25 access docs and jpms tests