@@ -38,7 +38,7 @@ Apache Fory™ provides blazingly fast Java object serialization with JIT compil
 ### Drop-in Replacement
 
 - **100% JDK Serialization Compatible**: Supports `writeObject`/`readObject`/`writeReplace`/`readResolve`/`readObjectNoData`/`Externalizable`
-- **Java 8-24 Support**: Works across all modern Java versions including Java 17+ records
+- **Java 8+ Support**: Works across all modern Java versions including Java 17+ records
 - **GraalVM Native Image**: AOT compilation support without reflection configuration
 - **Android API 26+ Support**: Core object serialization works on Android without runtime code generation.
 
@@ -70,8 +70,14 @@ implementation("org.apache.fory:fory-core:1.1.0")
 
 ### JDK25+
 
-On JDK25+, put Fory on the module path and open `java.lang.invoke` to the Fory
-core module:
+On JDK25+, open `java.lang.invoke` to Fory. Use `ALL-UNNAMED` when Fory is on
+the classpath:
+
+```bash
+--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+```
+
+Use the Fory core module name when Fory is on the module path:
 
 ```bash
 --add-opens=java.base/java.lang.invoke=org.apache.fory.core
