@@ -150,8 +150,14 @@ fory.registerSerializer(MyClass.class, new MyClassSerializer(fory.getTypeResolve
 
 ### JDK25+ access errors
 
-On JDK25+, if an error names `java.base/java.lang.invoke`, put Fory on the module path and open
-`java.lang.invoke` to the Fory core module:
+On JDK25+, if an error names `java.base/java.lang.invoke`, open `java.lang.invoke` to Fory. Use
+`ALL-UNNAMED` when Fory is on the classpath:
+
+```bash
+--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+```
+
+Use the Fory core module name when Fory is on the module path:
 
 ```bash
 --add-opens=java.base/java.lang.invoke=org.apache.fory.core
